crates/apollo-compiler/test_data/diagnostics/0021_union_definition_with_duplicate_members.txt
Error: the union member `Photo` is defined multiple times in the document
   ╭─[0021_union_definition_with_duplicate_members.graphql:5:30]
   │
 5 │ union SearchResult = Photo | Photo
   │                      ──┬──   ──┬──  
   │                        ╰──────────── previous definition of `Photo` here
   │                                │    
   │                                ╰──── `Photo` redefined here
   │ 
   │ Help: `Photo` must only be defined once in this document.
───╯

